Text overflow fix

--- a/Blogs/blogpage.css
+++ b/Blogs/blogpage.css
@@ -40,6 +40,7 @@ h2{
     margin-left: 375px;
     border: 1px solid black;
     padding: 20px;
+    overflow-wrap: anywhere;
 }
 
 .read-more{
